Pressing ENTER does not reload

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="randomWords"></div>
             <button type="button" id="randomWordButton">Get More Random Words</button>
             <h3>Enter a term:</h3>
-            <form>
+            <form class="submissions">
                 <label for="input1">Search Term:</label>
                 <input type="text" id="input1" name="input1">
                 <button type="button" id="submit">Submit</button>
@@ -25,7 +25,7 @@
             <div id="results"></div>
         </div>
         <div class="column">
-            <form>
+            <form class="submissions">
                 <label for="input1">Difference ("subtraction") between words:</label>
                 <input type="text" id="diff1" name="diff1"><strong>&nbsp;-&nbsp;</strong><input type="text" id="diff2" name="diff2">
                 <button type="button" id="submitDiff">Submit</button>
