--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Word2Vector Database: Historical Sources (short stories from 1917 - 1921)</h1>
+    <p>This is a <strong>limited</strong> example of loading a 90 MB small language model and providing query access. The 90 MB limit is based on GitHub Pages' upload limit, not the model itself. It is very common to have hundreds-of-MBs or multiple GBs for a single model.</p>
+    <p>In the Word2Vector method, words are converted into positions in space (vectors). When providing the closest words, these may not appear in source sentences but in the corpus as a whole. As part of the Continuous Bag of Words (CBOW) approach, the best results require very large input to create better results, as multiple occurrences of the same word can provide more accurate future predictions.</p>
     <hr>
     <div class="row">
         <div class="column">
